# snake-ai

./: .gitignore  README.md  pyproject.toml
src/game/: main.py  state.py
src/qlearn/: model.py
