[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qlearning"
version = "0.1.0"
description = "A simple Q-learning agent for the Snake game"
authors = [
    {name = "Kevin Nguyen", email = "ngynkvn@gmail.com"},
]
dependencies = [
    "numpy",
    "torch",
    "pygame",
]